package it.faustobe.santibailor.data.local.entities;

public interface DatabaseEntity {
    int getId();
    void setId(int id);
    String getTableName();
}
