classDiagram
    class AppDatabase {
        +RicorrenzaDao ricorrenzaDao()
        +TipoRicorrenzaDao tipoRicorrenzaDao()
        +static getDatabase(Context): AppDatabase
    }
    class Ricorrenza {
        -int id
        -int idMese
        -int giorno
        -String nome
        -String bio
        -String img
        -String prefix
        -String suffix
        -int tipoRicorrenzaId
    }
    class TipoRicorrenza {
        -int id
        -String nome
        +static RELIGIOSA: int
        +static LAICA: int
    }
    class RicorrenzaConTipo {
        +Ricorrenza ricorrenzaEntity
        +TipoRicorrenza tipoRicorrenzaEntity
    }
    class DatabaseEntity {
        <<interface>>
        +getId(): int
        +setId(int)
        +getTableName(): String
    }
    class RicorrenzaDao {
        <<interface>>
        +getRicorrenzeConTipo(): List<RicorrenzaConTipo>
        +getRicorrenzeDelGiorno(int, int): LiveData<List<RicorrenzaConTipo>>
        +getRicorrenzeDelGiornoPerTipo(int, int, int): LiveData<List<RicorrenzaConTipo>>
        +cercaRicorrenzePerNome(String): LiveData<List<Ricorrenza>>
        +ricercaAvanzata(...): LiveData<List<RicorrenzaConTipo>>
    }
    class TipoRicorrenzaDao {
        <<interface>>
        +getAllTipiRicorrenza(): LiveData<List<TipoRicorrenza>>
        +insert(TipoRicorrenza)
    }
    class BaseDao~T~ {
        <<interface>>
        +insert(T): long
        +update(T): int
        +delete(T): int
    }

    AppDatabase --> RicorrenzaDao
    AppDatabase --> TipoRicorrenzaDao
    Ricorrenza ..|> DatabaseEntity
    TipoRicorrenza ..|> DatabaseEntity
    RicorrenzaConTipo --> Ricorrenza
    RicorrenzaConTipo --> TipoRicorrenza
    RicorrenzaDao --|> BaseDao
    TipoRicorrenzaDao --|> BaseDao
